# rnnlm-optimization

./: CMakeLists.txt
src/: CMakeLists.txt
src/RNNLM-eigen/: main.cpp  rnnlmlib.cpp  rnnlmlib.h
