# Object Cadenza
#
# Copyright (c) 2014 Samsung Electronics Co., Ltd. All rights reserved.
#
# Authors: Andrey Moiseenko <moiseenko.a@samsung.com>,
#          Alexander Romanenko <Alexander Romanenko>, 
#          Irina Piontkovskaya <p.irina@samsung.com>, 
#          Manh Ha Le <mh.le@samsung.com>,
#          Mikhail Kudinov <m.kudinov@samsung.com>, 
#          Stepan Muzychka <s.muzychka@samsung.com>  

# src

# storage libraries
set(PROJECT_ROOT_DIR ${CMAKE_CURRENT_LIST_DIR})
add_subdirectory(Chunking Chunking)
add_subdirectory(CRF CRF)
add_subdirectory(CSVManager CSVManager)
add_subdirectory(DatabaseUpdater DatabaseUpdater)
add_subdirectory(DictionaryLite DictionaryLite)
add_subdirectory(Dictionary Dictionary)
add_subdirectory(Disambiguator Disambiguator)
add_subdirectory(Inflector Inflector)
add_subdirectory(FormattedIO FormattedIO)
add_subdirectory(KinopoiskDemo KinopoiskDemo)
add_subdirectory(Lemmatizer Lemmatizer)
add_subdirectory(LogisticRegression LogisticRegression)
add_subdirectory(LoopyBeliefPropagation LoopyBeliefPropagation)
add_subdirectory(MorphologySyntaxUnion MorphologySyntaxUnion)
add_subdirectory(NER NER)
add_subdirectory(NewsReaderDemo NewsReaderDemo)
add_subdirectory(NewsReaderDemo-eng NewsReaderDemo-eng)
add_subdirectory(NLPFileProcessor NLPFileProcessor)
add_subdirectory(NLUPhoenix NLUPhoenix)
add_subdirectory(NuanceClient NuanceClient)
add_subdirectory(Numb2String Numb2String)
add_subdirectory(Optimization Optimization)
add_subdirectory(PorterStemmer PorterStemmer)
add_subdirectory(PyCadenza PyCadenza)
add_subdirectory(RegexpTools RegexpTools)
add_subdirectory(RNNLM RNNLM)
add_subdirectory(RNNLM-eigen RNNLM-eigen)
add_subdirectory(RNNTools RNNTools)
add_subdirectory(SentenceSplitter SentenceSplitter)
add_subdirectory(SequenceTranslation SequenceTranslation)
add_subdirectory(StatCalc StatCalc)
add_subdirectory(StatGrammar StatGrammar)
add_subdirectory(Stresser Stresser)
add_subdirectory(SVM SVM)
add_subdirectory(SyntaxMatrixStatCalculator SyntaxMatrixStatCalculator)
add_subdirectory(SyntaxOntology SyntaxOntology)
add_subdirectory(SyntaxSummary SyntaxSummary)
add_subdirectory(SyntaxTreeBuilder SyntaxTreeBuilder)
add_subdirectory(TagsetConstants TagsetConstants)
add_subdirectory(TagsetConverter TagsetConverter)
add_subdirectory(TextClassifier TextClassifier)
add_subdirectory(TextClassificationEn TextClassificationEn)
add_subdirectory(TextMining TextMining)
add_subdirectory(TextSummarization TextSummarization)
add_subdirectory(TextSummarization-eng TextSummarization-eng)
add_subdirectory(TimexNormalizer TimexNormalizer)
add_subdirectory(Tokenizer Tokenizer)
add_subdirectory(Tools Tools)
add_subdirectory(TopicModeling TopicModeling)
add_subdirectory(TTS TTS)
add_subdirectory(utilities utilities)
add_subdirectory(Word2Vec Word2Vec)






